# XPlore

./: .gitignore  CMakeLists.txt  XPlore.sln  XPlore.vcxproj  XPlore.vcxproj.filters
src/: Application.cpp  Application.h  DirectoryView.cpp  DirectoryView.h  HirarchyView.cpp  HirarchyView.h  PopUpView.cpp  PopUpView.h  XPloreManager.cpp  XPloreManager.h  main.cpp  pch.h
src/Debug/: Debugger.h  Timer.cpp  Timer.h
src/Events/: EventType.h  Input.cpp  Input.h
src/Gui/: CmGui.cpp  CmGui.h  CustomGui.cpp  CustomGui.h  Gui.cpp  Gui.h  GuiDocking.cpp  GuiDocking.h  GuiTemplate.cpp  GuiTemplate.h
src/Render/: DirectoryView.cpp  DirectoryView.h  HirarchyView.cpp  HirarchyView.h  PopUpView.cpp  PopUpView.h
src/Util/: ConsoleColors.h  Fonts.cpp  Fonts.h  StringConverter.h  unique_vector.cpp  unique_vector.h
src/Window/: Window.cpp  Window.h
